--- a/styles/all.css
+++ b/styles/all.css
@@ -1,36 +1,30 @@
-@import "./examples-offline.css";
 @import "./kendo.common.min.css";
-@import "./kendo.rtl.min.css";
 @import "./kendo.default.min.css";
 @import "./font-awesome-4.7.0/css/font-awesome.min.css";
 
-html, body, #tabstrip  {
+* {
+  margin: 0;
+  padding: 0;
+}
+html, body {
   height: 100%;
   overflow: hidden;
 }
+#tabstrip {
+  height: 100%;
+}
 .k-tabstrip-wrapper {
-  height: calc(100% - 56px);
+  height: calc(100% - 54px);
 }
-.k-header.hd {
-  display: flex;
-  height: 54px;
-  width: 100%;
-  padding: 0 20px;
-  box-sizing: border-box;
-  justify-content: space-between;
-}
-.logo {
-  background: url(./images/logo.png) 0 center no-repeat;
+.logo{
+  background: url(./images/logo.png) 0 11px no-repeat;
   width: 130px;
   padding-left: 145px;
-  line-height: 20px;
+  line-height: 54px;
   font-size: 16px;
   letter-spacing: 2px;
   flex-shrink: 0;
   margin-left: 20px;
-}
-.logo>h4:first-child {
-  margin-top: 8px;
 }
 .menu {
   width: 100%;
@@ -53,13 +47,6 @@ html, body, #tabstrip  {
   padding: 0 12px;
   display: flex;
   align-items: center;
-}
-.links {
-  display: flex;
-  flex-shrink: 0;
-}
-#panelbar {
-  width: 100%;
 }
 .all-form {
   width: 80%;
@@ -115,9 +102,6 @@ html, body, #tabstrip  {
   margin-bottom: 10px;
   cursor: pointer;
 }
-/* .oper-btn button {
-  margin-bottom: 10px;
-} */
 .oper-btn .fa {
   font-size: 20px;
 }
@@ -136,6 +120,11 @@ label.required:after {
   position: absolute;
   top: -2px;
   right: -2px;
+  font-size: 16px;
+}
+th.required:after {
+  content: '*';
+  color: #f00;
   font-size: 16px;
 }
 
@@ -160,4 +149,25 @@ label.required:after {
   display: inline-block;
   border-radius: 50%;
   margin-right: 5px;
+}
+
+/* 关闭tab按钮 */
+.oper-tab {
+  position: absolute;
+  top: 70px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  text-align: right;
+}
+.oper-tab i {
+  cursor: pointer;
+}
+.oper-tab:hover .oper-btn {
+  display: block;
+}
+.oper-tab .oper-btn {
+  display: none;
+  /* position: absolute; */
 }
