--- a/styles/all.css
+++ b/styles/all.css
@@ -90,13 +90,13 @@ html, body {
   font-size: 16px;
 }
 
-.form-content {
-  display: flex;
-}
 .oper-btn {
+  position: fixed;
+  z-index: 100;
+  right: calc(10% - 10px);
+  top: 236px;
   display: flex;
   flex-direction: column;
-  margin-left: 10px;
 }
 .oper-btn button {
   margin-bottom: 10px;
@@ -105,7 +105,7 @@ html, body {
 .oper-btn .fa {
   font-size: 20px;
 }
-.form-content .k-form-buttons.k-buttons-end {
+.all-form .k-form-buttons.k-buttons-end {
   display: none;
 }
 .selected {
