入库明细真实数据渲染

--- a/styles/all.css
+++ b/styles/all.css
@@ -13,8 +13,14 @@ html, body {
 #tabstrip {
   height: 100%;
 }
+#tabstrip .k-content {
+  height: calc(100% - 120px)!important;
+  padding: 20px;
+  flex: 0 0 auto;
+}
 .k-tabstrip-wrapper {
   height: calc(100% - 54px);
+  padding-bottom: 100px;
 }
 .logo{
   background: url(./images/logo.png) 0 11px no-repeat;
@@ -164,10 +170,10 @@ th.required:after {
 .oper-tab i {
   cursor: pointer;
 }
-.oper-tab:hover .oper-btn {
+.oper-tab:hover .oper-tab-btn {
   display: block;
 }
-.oper-tab .oper-btn {
+.oper-tab .oper-tab-btn {
   display: none;
   /* position: absolute; */
 }
@@ -176,4 +182,17 @@ th.required:after {
 .window-operBtn {
   text-align: center;
   margin-top: 10px;
+}
+
+/* footer */
+/* body>footer {
+  display: none;
+} */
+footer {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  position: absolute;
+  bottom: 5px;
 }
