--- a/styles/all.css
+++ b/styles/all.css
@@ -74,7 +74,15 @@ html, body {
   border: none;
 }
 .k-form-field {
-  margin: 0 16px;
+  margin: 4px 16px;
+}
+.k-colspan-1 {
+  float: left;
+  width: 48%;
+}
+.k-colspan-2 {
+  float: left;
+  width: 98%;
 }
 .k-form-fieldset {
   margin: 8px 0 0;
