--- a/styles/all.css
+++ b/styles/all.css
@@ -3,279 +3,340 @@
 @import "./font-awesome-4.7.0/css/font-awesome.min.css";
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
-html, body {
-  height: 100%;
-  overflow: hidden;
+
+html,
+body {
+    height: 100%;
+    overflow: hidden;
 }
+
 #tabstrip {
-  height: 100%;
+    height: 100%;
 }
+
 #tabstrip .k-content {
-  height: calc(100% - 120px)!important;
-  padding: 20px;
-  flex: 0 0 auto;
+    height: calc(100% - 120px) !important;
+    padding: 20px;
+    flex: 0 0 auto;
 }
+
 .k-tabstrip-wrapper {
-  height: calc(100% - 54px);
-  padding-bottom: 100px;
+    height: calc(100% - 54px);
+    padding-bottom: 100px;
 }
+
 #horizontalMenu:first-child:focus {
-  border: none;
+    border: none;
 }
-.logo{
-  background: url(./images/logo.png) 0 11px no-repeat;
-  width: 200px;
-  padding-left: 145px;
-  line-height: 54px;
-  font-size: 16px;
-  letter-spacing: 2px;
-  flex-shrink: 0;
-  margin-left: 20px;
-  z-index: 999;
+
+.logo {
+    background: url(./images/logo.png) 0 11px no-repeat;
+    width: 230px;
+    padding-left: 145px;
+    line-height: 54px;
+    font-size: 18px;
+    letter-spacing: 2px;
+    flex-shrink: 0;
+    margin-left: 20px;
+    z-index: 999;
 }
+
 .menu {
-  width: 100%;
-  height: 54px;
-  display: flex;
-  justify-content: space-between;
+    width: 100%;
+    height: 54px;
+    display: flex;
+    justify-content: space-between;
 }
-.horizontal, 
-#horizontalMenu, 
+.k-menu:after {
+    display: none;
+}
+
+.horizontal,
+#horizontalMenu,
 #horizontalMenu.k-menu .k-item,
 #horizontalMenu.k-menu .k-item>.k-link,
-#horizontalMenu.k-menu-scroll-wrapper .k-item>.k-link, 
+#horizontalMenu.k-menu-scroll-wrapper .k-item>.k-link,
 #horizontalMenu.k-popups-wrapper .k-item>.k-link {
-  height: 100%;
+    height: 100%;
 }
+
 #horizontalMenu.k-menu .k-item>.k-link,
-#horizontalMenu.k-menu-scroll-wrapper .k-item>.k-link, 
+#horizontalMenu.k-menu-scroll-wrapper .k-item>.k-link,
 #horizontalMenu.k-popups-wrapper .k-item>.k-link {
-  padding: 0 12px;
-  display: flex;
-  align-items: center;
+    padding: 0 12px;
+    display: flex;
+    align-items: center;
 }
+
 .all-form {
-  width: 80%;
-  margin: 0 auto;
+    width: 80%;
+    margin: 0 auto;
 }
+
 .form-title {
-  text-align: center;
-  margin-bottom: 20px;
+    text-align: center;
+    margin-bottom: 20px;
 }
-.demo-section:not(.wide), #example .box:not(.wide) {
-  max-width: none;
+
+.demo-section:not(.wide),
+#example .box:not(.wide) {
+    max-width: none;
 }
-.k-form-horizontal .k-form-field>.k-form-label, .k-form-horizontal .k-form-field>.k-label{
-  width: 165px!important;
-  justify-content: end!important;
+
+.k-form-horizontal .k-form-field>.k-form-label,
+.k-form-horizontal .k-form-field>.k-label {
+    width: 165px !important;
+    justify-content: end !important;
 }
+
 .k-form-legend {
-  margin: 0;
-  border: none;
+    margin: 0;
+    border: none;
 }
+
 .k-form-field {
-  margin: 4px 16px;
+    margin: 4px 16px;
 }
+
 .k-colspan-1 {
-  float: left;
-  width: 45%;
+    float: left;
+    width: 45%;
 }
+
 .k-colspan-2 {
-  float: left;
-  width: 93%;
+    float: left;
+    width: 93%;
 }
+
 .k-form-fieldset {
-  margin: 8px 0 0;
+    margin: 8px 0 0;
 }
+
 .k-content {
-  height: calc(100% - 50px);
+    height: calc(100% - 50px);
 }
+
 .k-panelbar .k-content {
-  padding: 20px;
+    padding: 20px;
 }
+
 .k-state-selected {
-  background-color: #eae8e8;
-  border-color: #eae8e8;
+    background-color: #eae8e8;
+    border-color: #eae8e8;
 }
-.k-panelbar .k-item .k-link.k-state-selected, .k-panelbar>li.k-state-default>.k-link.k-state-selected, .k-panelbar>li>.k-state-selected {
-  color: #2e2e2e;
+
+.k-panelbar .k-item .k-link.k-state-selected,
+.k-panelbar>li.k-state-default>.k-link.k-state-selected,
+.k-panelbar>li>.k-state-selected {
+    color: #2e2e2e;
 }
+
 .k-panelbar>.k-item>.k-link {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 .oper-btn {
-  position: fixed;
-  z-index: 100;
-  right: calc(10% - 60px);
-  top: 246px;
-  display: flex;
-  flex-direction: column;
+    position: fixed;
+    z-index: 100;
+    right: calc(10% - 80px);
+    top: 246px;
+    display: flex;
+    flex-direction: column;
 }
+
 .oper-btn button {
-  margin-bottom: 10px;
-  cursor: pointer;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
+
 .oper-btn .fa {
-  font-size: 20px;
-  margin-right: 5px;
+    font-size: 20px;
+    margin-right: 5px;
 }
+
 .all-form .k-form-buttons.k-buttons-end {
-  display: none;
+    display: none;
 }
+
 .selected {
-  height: calc(100% - 60px)!important;
+    height: calc(100% - 60px) !important;
 }
+
 label.required {
-  position: relative;
+    position: relative;
 }
+
 label.required:after {
-  content: '*';
-  color: #f00;
-  position: absolute;
-  top: -2px;
-  right: -2px;
-  font-size: 16px;
+    content: '*';
+    color: #f00;
+    position: absolute;
+    top: -2px;
+    right: -7px;
+    font-size: 16px;
 }
+
 th.required:after {
-  content: '*';
-  color: #f00;
-  font-size: 16px;
+    content: '*';
+    color: #f00;
+    font-size: 16px;
 }
+
 
 /* 主题弹窗 */
+
 #s-l-themes>.color-block {
-  display: flex;
-  flex-wrap: wrap;
-}
-#s-l-themes>.color-block>div {
-  padding: 5px 0;
-  width: 33%;
-  display: flex;
-  cursor: pointer;
-}
-#s-l-themes>.color-block>div:hover,
-#s-l-themes>.color-block>div.selected {
-  background: rgba(0,0,0,0.1)
-}
-.themeDot {
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  border-radius: 50%;
-  margin-right: 5px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
+#s-l-themes>.color-block>div {
+    padding: 5px 0;
+    width: 33%;
+    display: flex;
+    cursor: pointer;
+}
+
+#s-l-themes>.color-block>div:hover,
+#s-l-themes>.color-block>div.selected {
+    background: rgba(0, 0, 0, 0.1)
+}
+
+.themeDot {
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+
 /* window按钮 */
+
 .window-operBtn {
-  text-align: center;
-  margin-top: 10px;
+    text-align: center;
+    margin-top: 10px;
 }
 
 footer {
-  display: block;
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
-  position: absolute;
-  bottom: 5px;
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    position: absolute;
+    bottom: 5px;
 }
 
 .k-link .k-sprite {
-  font-size: 16px;
-  line-height: 16px;
+    font-size: 16px;
+    line-height: 16px;
 }
 
 textarea[type="text"] {
-  height: 60px;
+    height: 60px;
 }
 
 .k-grid tbody .k-button {
-  min-width: 25px;
+    min-width: 25px;
 }
 
 a.tab-link {
-  color: #337ab7;
-  cursor: pointer;
+    color: #337ab7;
+    cursor: pointer;
 }
+
 
 /* 货位图 */
+
 #tilelayout ul {
-  list-style: none;
-}
-#tilelayout .choose-area {
-  display: flex;
-  justify-content: space-between;
-}
-#tilelayout .choose-area ul {
-  display: flex;
-  line-height: 30px;
-}
-#tilelayout .choose-area ul li{
-  margin-left: 20px;
-  display: flex;
-  align-items: center;
-}
-#tilelayout .location-map .k-card-header {
-  display: flex;
-  justify-content: space-between;
-}
-#tilelayout .location-map .k-card-header ul {
-  display: flex;
-  align-items: center;
-}
-#tilelayout .location-map .location-map-status,
-.all-status {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin: 0 2px;
-}
-#tilelayout .location-map .k-card-body {
-  padding: 0;
-}
-#tilelayout .location-map .k-card-body ul {
-  width: 100%;
-  height: 100%;
-  padding: 15px;
-  box-sizing: border-box;
+    list-style: none;
 }
 
-/* 切换仓库用户 */
-#swichWarehouse .confirm-btn {
-  width: 100%;
-  margin-top: 20px;
+#tilelayout .choose-area {
+    display: flex;
+    justify-content: space-between;
 }
-#swichWarehouse .k-content>div {
-  display: flex;
-  align-items: center;
-  margin-top: 20px;
+
+#tilelayout .choose-area ul {
+    display: flex;
+    line-height: 30px;
 }
-#swichWarehouse .k-content>div h4 {
-  width: 80px;
+
+#tilelayout .choose-area ul li {
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+}
+
+#tilelayout .location-map .k-card-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+#tilelayout .location-map .k-card-header ul {
+    display: flex;
+    align-items: center;
+}
+
+#tilelayout .location-map .location-map-status,
+.all-status {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    margin: 0 2px;
+}
+
+#tilelayout .location-map .k-card-body {
+    padding: 0;
+}
+
+#tilelayout .location-map .k-card-body ul {
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+
+/* 切换仓库货主 */
+
+#switchWarehouseConsignorPopupWindow .confirm-btn {
+    width: 100%;
+    margin-top: 20px;
+}
+
+#switchWarehouseConsignorPopupWindow .k-content>div {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+#switchWarehouseConsignorPopupWindow .k-content>div h4 {
+    width: 80px;
 }
 
 /* 选人框 */
 input~.fa-user {
-  position: absolute;
-  top: 7px;
-  right: 7px;
+    position: absolute;
+    top: 7px;
+    right: 7px;
 }
+
 .choose-user .k-listbox {
-  width: 50%;
-  height: 310px;
+    width: 50%;
+    height: 310px;
 }
 
 .choose-user .k-listbox:first-of-type {
-  width: calc(50% + 37px);
-  margin-right: 5px;
+    width: calc(50% + 37px);
+    margin-right: 5px;
 }
-.choose-user .user-btn{
-  margin-top: 10px;
-  text-align: center;
+
+.choose-user .user-btn {
+    margin-top: 10px;
+    text-align: center;
 }
 
 /* 公共表单样式：items的隐藏，readonly样式 */
